# cpp_bootstrap

./: .gitignore  BasicCmake.cmake  CMakeLists_template.cmake  README.md
Docker/: Dockefile.default  Dockerfile.clion  Dockerfile.clion_local  Dockerfile.clion_remote  Dockerfile.gcc_4_8.clion_remote  README.md  arch_clion_local.Dockerfile  arch_clion_remote.DockerFile  base_libs.DockerFile  clion_local.Dockerfile  clion_remote.DockerFile  conan_default  create_dev_docker.sh  docker_hub_img  modify_img.sh  sshd_config
common/CMake/: CMakeUtils.cmake  CommonInclude.cmake  FuncDefs.cmake  SwigCmake.cmake  travel_dir.py
common/before_main_funcs/: before_main.cpp
common/common_include/: boost_log.h  common_classes.h  common_configure.h.in  common_funcs.cpp  common_funcs.h  common_includes.cpp  common_includes.h  cpp_reflact.hpp  has_member.h  log_init.cpp  log_init.h  log_row.h  quick_define.h  std_log.h  stl_to_steam.h  stl_to_str.h  time_gap.hpp
common/data/properties/: boost_log_settings.ini
template_project/: CMakeLists.txt
templates/template_main_with_lib/: CMakeLists.txt  test_func.cpp
